<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.fragment.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_hat"
                android:layout_width="@dimen/hat_size"
                android:layout_height="@dimen/hat_size"
                android:layout_marginTop="@dimen/margin_top_hat"
                android:contentDescription="@string/hat"
                android:src="@drawable/hat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_house_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/potter"
                android:text="@string/house_selection_text"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_hat" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_house_selection_margin_top"
                android:hint="@string/hat_enter_your_name"
                android:inputType="text"
                android:fontFamily="@font/potter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_house_selection" />

            <ProgressBar
                android:id="@+id/loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_know_your_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_know_your_house"
                android:text="@string/hat_btn_know_your_house"
                android:fontFamily="@font/potter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <ImageView
                android:id="@+id/iv_house"
                android:layout_width="300dp"
                android:layout_height="230dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_know_your_house"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_know_your_school_mates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/know_your_school_mates"
                android:visibility="gone"
                android:fontFamily="@font/potter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_house"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>